# jaxpt

./: GPU_Performance_Tuning_(Jax).ipynb  Makefile  README.md  gpu_performance_tuning__jax.ipynb  lambda_setup.sh  pyproject.toml
datasets/fineweb-edu/: cached_fineweb100B.py  fineweb-edu.ipynb  fineweb-edu.py  tokenize_fineweb.py
datasets/panchatantra-ryder/: panchatantra-ryder.py  preprocessing.py
datasets/panchatantra-ryder/data/: panchatantra-ryder-clean.txt  panchatantra-ryder.txt
datasets/panchatantra-ryder/processed/: panchatantra_train_0.npy  panchatantra_valid_1.npy
datasets/smol-lm-corpus/: smol-lm-corpus.ipynb
datasets/webinstruct-sub/: webinstruct-sub.ipynb
jaxpt/: Makefile  README.md  dataloaders.py  infer.py  main.py  models.py  pyproject.toml  train.py  utils.py
jaxpt/datasets/: panchatantra-ryder.txt
jaxpt/models/: __init__.py  bigram.py  charformer.py  gpt2.py  moe.py
jaxpt/modules/: attention.py  mlp.py
notebooks/: GPU_Performance_Tuning(PyTorch).ipynb  GPU_Performance_Tuning_(Jax).ipynb  basic_moe.ipynb  eval_smol_lm.ipynb  eval_smol_lm_kv_caching.ipynb  eval_tiny_moe.ipynb  eval_tiny_moe_3.ipynb  flash_attention_performance.ipynb  gpt2_playground.ipynb  gpt_experiment_template.ipynb  how-mixture-of-experts-works-part-1.ipynb  how-mixture-of-experts-works-part-2.ipynb  huggingface_save_load.ipynb  jax_distributed_training.ipynb  layernorm_experiment.ipynb  model_sharding_experiment.ipynb  moe.ipynb  play.ipynb  python_multiprocessing_tests.ipynb  rope_experiment.ipynb  scratch.ipynb  sft_mobile_llm.ipynb  sft_smol_lm_135m_chat.ipynb  soft_moe.ipynb  train_glam.ipynb  train_glam_2.ipynb  train_glu_gpt.ipynb  train_glu_gpt_panchatantra.ipynb  train_glu_rope_gpt.ipynb  train_gpt2.ipynb  train_gpt2_slim.ipynb  train_gpt3.ipynb  train_gqa_gpt.ipynb  train_gqa_gpt_panchatantra.ipynb  train_mobile_llm.ipynb  train_nope_gpt.ipynb  train_rope_gpt.ipynb  train_smol_lm_135m.ipynb  train_smol_lm_135m_panchatantra.ipynb  train_smol_lm_360m.ipynb  (+3 more)
scripts/: export_nb.py
src/jaxpt/: chat.py  chatml.py  checkpointers.py  dataloaders.py  eval.py  evaluate.py  hellaswag.py  infer.py  main.py  train.py  utils.py
src/jaxpt/datasets/fineweb-edu/: fineweb-edu.ipynb  fineweb-edu.py
src/jaxpt/datasets/panchatantra-ryder/: panchatantra-ryder.py
src/jaxpt/datasets/panchatantra-ryder/processed/: panchatantra_0.npy  panchatantra_train_0.npy  panchatantra_valid_1.npy
src/jaxpt/evals/: eval.py  hellaswag.py  lighteval.py  lighteval_gpt2.py  lighteval_smollm.py  lighteval_tiny_moe.py  run_lighteval.py
src/jaxpt/evals/lighteval/tasks/: smollm3_tasks.py
src/jaxpt/models/: __init__.py  charformer.py  glam.py  glu_gpt.py  glu_rope_gpt.py  gpt.py  gpt2.py  gqa_glu_rope_gpt.py  gqa_gpt.py  mobile_llm.py  nope_gpt.py  rope_gpt.py  sharded_charformer.py  smol_lm.py  tiny_moe.py  tiny_moe_2.py  tiny_moe_3.py  vgpt.py
src/jaxpt/modules/: __init__.py  attention.py  config.py  jaxpt.code-workspace  mlp.py  moe.py  position.py
tests/functional/: test_attention_functional.py  test_implicit_all_to_all.py
tests/models/: test_tiny_moe.py
tests/unit/: test_attention.py  test_dataloaders.py  test_infer.py
trainers/: README.md  train_tiny_moe.py  train_tiny_moe_2.py  train_tiny_moe_3.py  train_tiny_moe_deepseek.py  train_tiny_moe_new.py  train_tiny_moe_panchatantra.py  train_tiny_moe_wide.py
