[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxpt"
version = "0.1.0"
description = "GPT models built with Jax"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "google-cloud-storage>=3.1.0",
    "english-words>=2.0.1",
    "flash-attention-jax>=0.3.1",
    "numpy>=2.3.3",
    "more-itertools>=10.7.0",
    "orbax>=0.1.9",
]

[project.optional-dependencies]
#eval = [
#    "requests>=2.32.3",
##    "torch==2.7.1",
#    "lighteval>=0.10.0",
#    "langcodes>=3.5.0",
#    "spacy>=3.8.7",
#    "stanza>=1.10.1",
#    "pyvi>=0.1.1",
#    "jieba>=0.42.1",
#]
cuda = [
    #"jax[cuda12]==0.6.2",
    #"jax[cuda12]==0.5.2",
    #"jax[cuda12]==0.7.0",
    "jax[cuda12]==0.7.1",
    #"flax==0.10.7",
    #"flax==0.10.6",
    "flax==0.11.1"
]
metal = [
    #"jax>=0.5.2",
    #"flax==0.10.6",
    #"jax[cuda12]==0.6.2",
    #"flax==0.10.7",
    "jax==0.7.1",
    "flax==0.11.1"
]
tpu = [
    "libtpu",
    "cloud-tpu-client",
]
dev = [
    "datasets==3.6.0",
    "tiktoken>=0.9.0",
    "transformers>=4.54.1",
    "seaborn[dev]>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.8",
    "nltk>=3.9.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "ipykernel>=6.29.5",
    "huggingface>=0.0.1",
    "pytest>=8.0.0",
    "ipykernel>=6.29.5",
    "ruff>=0.2.0",
    "jaxpt",
    "xprof>=2.20.1",
    "tensorboard>=2.19.0",
    "boto3>=1.39.4",
    "smart-open[s3]>=7.3.0.post1",
]

[tool.hatch.build]
packages = ["src/jaxpt"]

[tool.hatch.envs.default]
dependencies = [
    "jax==0.5.2; platform_machine == 'arm64' and platform_system == 'Darwin'",
    "jax[cuda12_pip]==0.5.2; platform_machine == 'x86_64'",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

# Same as Black.
line-length = 80
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Ignore specific rules
ignore = [
    "E501",  # Line too long
    "E741",  # Ambiguous variable name
    "F401",  # imported but unused
    "F403",  # 'from module import *' used
    "F405",  # Name may be undefined, or defined from star imports
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.uv.sources]
jaxpt = { workspace = true }
