[project]
name = "jaxpt"
version = "0.1.0"
description = "GPT models built with Jax"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.10.2",
    "huggingface>=0.0.1",
    "ipykernel>=6.29.5",
    "jax>=0.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
